--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,20 @@
-venv/
+# Python
 __pycache__/
-*.pyc
-.DS_Store
+*.py[cod]
 *.egg-info/
-.idea/
+*.egg
+*.pkl
+
+# Virtual environments
+venv/
+env/
+
+# IDEs
 .vscode/
+.idea/
+
+# OS
+.DS_Store
+
+# Gradio temp files
+gradio_cached_examples/
